# atomic-radius

./: .gitignore  MANIFEST.in  README.md  dev-requirements.in  dev-requirements.txt  setup.cfg
atomic_radius/: __main__.py  config.py  constants.py  nucleus.py  relativity.py  scattering.py  scattering_data.csv
tests/: test_relativity.py  test_scattering.py
