[metadata]
name = atomic-radius
version = 0.0.1
license = "GNU General Public License v3.0"
description = Calculate the size of an atomic necleus from scattering data
long_description = file: README.md
author = Simon Paulsson

[options]
packages = atomic_radius
include_package_data = True
install_requires = 
    # List all requirements here
